# taxi-prediction-fullstack-nore

./: README.md  VIDEOLINK.md  pyproject.toml
src/taxipred/: __init__.py
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: cleaned_taxi_trip_pricing.csv  completed_data.csv  taxi_price_model.joblib
src/taxipred/frontend/: app.py
src/taxipred/model_development/: eda.ipynb  model_dev.ipynb  test_model.ipynb
src/taxipred/utils/: constants.py
